try to bugfix align-items: baseline;

--- a/blocks/profile/__name-block/profile__name-block.css
+++ b/blocks/profile/__name-block/profile__name-block.css
@@ -1,5 +1,5 @@
 .profile__name-block {
-  display: flex;
+  display: inline-flex;
   align-items: baseline;
 }
 
